--- a/AntRunner1.0/AntRunner1.0.csproj
+++ b/AntRunner1.0/AntRunner1.0.csproj
@@ -10,7 +10,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>AntRunner</RootNamespace>
     <AssemblyName>AntRunner</AssemblyName>
-    <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <TargetFrameworkProfile>
     </TargetFrameworkProfile>
     <FileAlignment>512</FileAlignment>
@@ -89,12 +89,16 @@
     <Compile Include="Helper.cs" />
     <Compile Include="MyComputer.cs" />
     <Compile Include="ParaObject.cs" />
+    <Compile Include="TestType2IsEnable2.cs" />
     <Compile Include="Settings.cs" />
     <Compile Include="SetupWin.xaml.cs">
       <DependentUpon>SetupWin.xaml</DependentUpon>
     </Compile>
     <Compile Include="SingleData.cs" />
+    <Compile Include="TestType2IsEnable1.cs" />
+    <Compile Include="VNA.cs" />
     <Compile Include="VNA_AT5071C.cs" />
+    <Compile Include="VNA_AT8753ES.cs" />
     <Page Include="AboutWin.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
