集成扫描枪

--- a/AntRunner1.0/Properties/Settings.settings
+++ b/AntRunner1.0/Properties/Settings.settings
@@ -56,7 +56,7 @@
     <Setting Name="DeepCompareType" Type="AntRunner.CompareType" Scope="User">
       <Value Profile="(Default)">AllUp</Value>
     </Setting>
-    <Setting Name="UserScanner" Type="System.Boolean" Scope="User">
+    <Setting Name="UseScanner" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
   </Settings>
